portal/yaml/curl-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-test
  namespace: auth0
spec:
  containers:
  - name: curl
    image: curlimages/curl:latest
    command: ["sleep", "infinity"]
