portal/yaml/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxt-portal
  namespace: auth0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nuxt-portal
  template:
    metadata:
      labels:
        app: nuxt-portal
    spec:
      containers:
      - name: nuxt-portal
        image: tororomeshi/nuxt-portal:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
