portal/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-portal
  namespace: auth0
spec:
  type: ClusterIP
  selector:
    app: nuxt-portal
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
