portal/yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nuxt-portal-ingress
  namespace: auth0
  annotations:
    ingressClassName: "cloudflare"
spec:
  rules:
  - host: portal.tororomeshi.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nuxt-portal
            port:
              number: 3000
